Fix to also link URI for COMMENT,RSTRING

--- a/test/org/opensolaris/opengrok/analysis/rust/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/rust/sample_xref.html
@@ -160,5 +160,6 @@ function get_sym_list(){return [["Variable","xv",[["bytes",44],["state",45]]],["
 <a class="l" name="152" href="#152">152</a><span class='fold-space'>&nbsp;</span>    <span class="c">/*   /* */  /** */
 <a class="l" name="153" href="#153">153</a><span class='fold-space'>&nbsp;</span>    pub mod dummy_item {}  /*! */  */</span>
 <a class="l" name="154" href="#154">154</a><span class='fold-space'>&nbsp;</span>&#125;
-<a class="l" name="155" href="#155">155</a><span class='fold-space'>&nbsp;</span></body>
+<a class="l" name="155" href="#155">155</a><span class='fold-space'>&nbsp;</span><span class="c">/*<a href="http://example.com">http://example.com</a>*/</span>
+<a class="l" name="156" href="#156">156</a><span class='fold-space'>&nbsp;</span></body>
 </html>
