Fix to fine-tune URI link for Erlang QATOM

--- a/test/org/opensolaris/opengrok/analysis/erlang/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/erlang/sample_xref.html
@@ -65,5 +65,6 @@ function get_sym_list(){return [["Function","xf",[["flush",51],["loop",27],["sta
 <a class="l" name="57" href="#57">57</a>	<b>after</b> <span class="n">0</span> -&gt;
 <a class="l" name="58" href="#58">58</a>		<a href="/source/s?defs=ok" class="intelliWindow-symbol" data-definition-place="undefined-in-file">ok</a>
 <a class="l" name="59" href="#59">59</a>	<b>end</b>.
-<a class="hl" name="60" href="#60">60</a></body>
+<a class="hl" name="60" href="#60">60</a><span class="s">&apos;<a href="http://example.com?a=">http://example.com?a=</a>&apos;</span>
+<a class="l" name="61" href="#61">61</a></body>
 </html>
