--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ Requirements:
   </li>
 
   <li>
-  <a href="http://ctags.sourceforge.net/">Exuberant Ctags</a>
+  <a href="https://github.com/universal-ctags/ctags">Universal ctags</a>
+  (Exuberant ctags work too)
   </li>
 </ul>
 
