--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
 <p>
 OpenGrok is a fast and usable source code search and cross reference engine. It
-helps you search, cross-reference and navigate your source tree. It can
-understand various program file formats and version control histories like
-Mercurial, Git, SCCS, RCS, CVS, Subversion, Teamware, ClearCase, Perforce,
-Monotone and Bazaar. In other words it lets you grok (profoundly understand)
+helps you search, cross-reference and navigate your source tree. It
+understands various program file formats and history from many Source Code
+Management systems.
+In other words it lets you <i>grok</i> (profoundly understand)
 source code and is developed in the open, hence the name OpenGrok. It is
 written in Java.
 </p>
