--- a/test/org/opensolaris/opengrok/analysis/golang/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/golang/sample_xref.html
@@ -145,5 +145,7 @@ function get_sym_list(){return [["Package","xp",[["fzf",23]]],["Struct","xs",[["
 <a class="l" name="137" href="#137">137</a>	<a href="/source/s?defs=r" class="intelliWindow-symbol" data-definition-place="undefined-in-file">r</a>.<a class="d intelliWindow-symbol" href="#feed" data-definition-place="defined-in-file">feed</a>(<a href="/source/s?defs=out" class="intelliWindow-symbol" data-definition-place="undefined-in-file">out</a>)
 <a class="l" name="138" href="#138">138</a>	<b>return</b> <a href="/source/s?defs=listCommand" class="intelliWindow-symbol" data-definition-place="undefined-in-file">listCommand</a>.<a href="/source/s?defs=Wait" class="intelliWindow-symbol" data-definition-place="undefined-in-file">Wait</a>() == <b>nil</b>
 <a class="l" name="139" href="#139">139</a>}
-<a class="hl" name="140" href="#140">140</a></body>
+<a class="hl" name="140" href="#140">140</a><span class="c">/*<a href="http://example.com">http://example.com</a>*/</span>
+<a class="l" name="141" href="#141">141</a><b>import</b> (<span class="s">&apos;<a href="http://example.com">http://example.com</a>&apos;</span>)
+<a class="l" name="142" href="#142">142</a></body>
 </html>
