Fix to fine-tune URI link for Sh QSTRING

--- a/test/org/opensolaris/opengrok/analysis/sh/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/sh/sample_xref.html
@@ -275,5 +275,6 @@ function get_sym_list(){return [["Function","xf",[["fail",51],["info",68],["time
 <a class="l" name="267" href="#267">267</a>
 <a class="l" name="268" href="#268">268</a><b>typeset</b> -i <a href="/source/s?defs=vint" class="intelliWindow-symbol" data-definition-place="undefined-in-file">vint</a>
 <a class="l" name="269" href="#269">269</a><a href="/source/s?defs=vint" class="intelliWindow-symbol" data-definition-place="undefined-in-file">vint</a>=<span class="n">0xFFEF</span>
-<a class="hl" name="270" href="#270">270</a></body>
+<a class="hl" name="270" href="#270">270</a><b>echo</b> <span class="s">&apos;<a href="http://example.com">http://example.com</a>&apos;</span>
+<a class="l" name="271" href="#271">271</a></body>
 </html>
