Fix to fine-tune URI link for CSharp COMMENT,QSTRING

--- a/test/org/opensolaris/opengrok/analysis/csharp/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/csharp/sample_xref.html
@@ -341,5 +341,6 @@ function get_sym_list(){return [["Class","xc",[["Serialization",52],["WrappedDes
 <a class="l" name="333" href="#333">333</a><span class='fold-space'>&nbsp;</span>        <b>private</b> <b>bool</b> <a href="/source/s?refs=_atEnd" class="xfld intelliWindow-symbol" data-definition-place="def">_atEnd</a>&#59;
 <a class="l" name="334" href="#334">334</a><span class='fold-space'>&nbsp;</span>    &#125;
 <a class="l" name="335" href="#335">335</a><span class='fold-space'>&nbsp;</span>&#125;   <span class="c">// namespace</span>
-<a class="l" name="336" href="#336">336</a><span class='fold-space'>&nbsp;</span></body>
+<a class="l" name="336" href="#336">336</a><span class='fold-space'>&nbsp;</span><span class="c">/*<a href="http://example.com">http://example.com</a>*/</span>
+<a class="l" name="337" href="#337">337</a><span class='fold-space'>&nbsp;</span></body>
 </html>
