--- a/test/org/opensolaris/opengrok/analysis/java/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/java/sample_xref.html
@@ -82,5 +82,6 @@ function get_sym_list(){return [["Class","xc",[["InnerClass",47],["Sample",25]]]
 <a class="l" name="74" href="#74">74</a><span class='fold-space'>&nbsp;</span>    &#125;
 </span><a class="l" name="75" href="#75">75</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="76" href="#76">76</a><span class='fold-space'>&nbsp;</span>&#125;
-<a class="l" name="77" href="#77">77</a><span class='fold-space'>&nbsp;</span></body>
+<a class="l" name="77" href="#77">77</a><span class='fold-space'>&nbsp;</span><span class="c">/*<a href="http://example.com">http://example.com</a>*/</span>
+<a class="l" name="78" href="#78">78</a><span class='fold-space'>&nbsp;</span></body>
 </html>
