Fix to fine-tune URI link for Ruby QUO,QUOxN

--- a/test/org/opensolaris/opengrok/analysis/ruby/ruby_xrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/ruby/ruby_xrefres.html
@@ -182,5 +182,6 @@ function get_sym_list(){return [["Class","xc",[["Board",4]]],["Method","xmt",[["
 <a class="l" name="174" href="#174">174</a>  <b>system</b>(<span class="s">&quot;stty -raw echo&quot;</span>)
 <a class="l" name="175" href="#175">175</a><b>end</b>
 <a class="l" name="176" href="#176">176</a><b>print</b> <span class="s">&quot;\n&quot;</span>
-<a class="l" name="177" href="#177">177</a></body>
+<a class="l" name="177" href="#177">177</a><b>print</b> <span class="s">&apos;<a href="http://example.com">http://example.com</a>&apos;</span>
+<a class="l" name="178" href="#178">178</a></body>
 </html>
