Fix to fine-tune URI link for Perl QUO,QUOxN

--- a/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/perl/samplexrefres.html
@@ -389,5 +389,6 @@
 <a class="l" name="382" href="#382">382</a><span class="s">&quot;left&quot;,  &quot;middle&quot;, &quot;right&quot;</span>
 <a class="l" name="383" href="#383">383</a><span class="s">.</span>
 <a class="l" name="384" href="#384">384</a><b>print</b> <span class="s">&quot;1\n&quot;</span>;
-<a class="l" name="385" href="#385">385</a></body>
+<a class="l" name="385" href="#385">385</a><b>print</b> <span class="s">&apos;<a href="http://example.com">http://example.com</a>&apos;</span>;
+<a class="l" name="386" href="#386">386</a></body>
 </html>
