Allow single-char identifiers per Lubos
... but add exceptions for getopts-looking single
character syntax such as "-x" or "x)".

Also:
- Space out regexes from JFlex braces for readability.

--- a/test/org/opensolaris/opengrok/analysis/sh/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/sh/sample_xref.html
@@ -114,10 +114,10 @@ function get_sym_list(){return [["Function","xf",[["fail",51],["info",68],["time
 <a class="l" name="106" href="#106">106</a><b>while</b> <b>getopts</b> <a href="/source/s?defs=cfm" class="intelliWindow-symbol" data-definition-place="undefined-in-file">cfm</a>:<a href="/source/s?defs=px" class="intelliWindow-symbol" data-definition-place="undefined-in-file">px</a>: <a href="/source/s?defs=flag" class="intelliWindow-symbol" data-definition-place="undefined-in-file">flag</a>; <b>do</b>
 <a class="l" name="107" href="#107">107</a>	<b>case</b> <a href="/source/s?defs=$flag" class="intelliWindow-symbol" data-definition-place="undefined-in-file">$flag</a> <b>in</b>
 <a class="l" name="108" href="#108">108</a>	c)
-<a class="l" name="109" href="#109">109</a>		<a href="/source/s?defs=clobber" class="intelliWindow-symbol" data-definition-place="undefined-in-file">clobber</a>=y
+<a class="l" name="109" href="#109">109</a>		<a href="/source/s?defs=clobber" class="intelliWindow-symbol" data-definition-place="undefined-in-file">clobber</a>=<a href="/source/s?defs=y" class="intelliWindow-symbol" data-definition-place="undefined-in-file">y</a>
 <a class="hl" name="110" href="#110">110</a>		;;
 <a class="l" name="111" href="#111">111</a>	f)
-<a class="l" name="112" href="#112">112</a>		<a href="/source/s?defs=noflg" class="intelliWindow-symbol" data-definition-place="undefined-in-file">noflg</a>=y
+<a class="l" name="112" href="#112">112</a>		<a href="/source/s?defs=noflg" class="intelliWindow-symbol" data-definition-place="undefined-in-file">noflg</a>=<a href="/source/s?defs=y" class="intelliWindow-symbol" data-definition-place="undefined-in-file">y</a>
 <a class="l" name="113" href="#113">113</a>		;;
 <a class="l" name="114" href="#114">114</a>	m)
 <a class="l" name="115" href="#115">115</a>		<a href="/source/s?defs=XRMAKEFILE" class="intelliWindow-symbol" data-definition-place="undefined-in-file">XRMAKEFILE</a>=<a href="/source/s?defs=$OPTARG" class="intelliWindow-symbol" data-definition-place="undefined-in-file">$OPTARG</a>
