Condense the disparate htmlize() implementations
- Add Util.prehtmlize() for the mode which an Xref
  might need.
- Otherwise, update the Util method to also quote
  &quot; and &apos;, and update users and tests.
  Util.diffline() is updated to htmlize() all
  output -- not just when different.

--- a/test/org/opensolaris/opengrok/analysis/python/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/python/sample_xref.html
@@ -157,6 +157,6 @@ function get_sym_list(){return [["Variable","xv",[["char",121],["char_dict",93],
 <a class="l" name="149" href="#149">149</a>    <a class="d intelliWindow-symbol" href="#f" data-definition-place="defined-in-file">f</a>.<a href="/source/s?defs=writelines" class="intelliWindow-symbol" data-definition-place="undefined-in-file">writelines</a>(<a class="d intelliWindow-symbol" href="#text" data-definition-place="defined-in-file">text</a>)
 <a class="hl" name="150" href="#150">150</a>    <a class="d intelliWindow-symbol" href="#f" data-definition-place="defined-in-file">f</a>.<a href="/source/s?defs=close" class="intelliWindow-symbol" data-definition-place="undefined-in-file">close</a>()
 <a class="l" name="151" href="#151">151</a><b>print</b>(<span class="s">&apos;<a href="http://example.com?a=">http://example.com?a=</a>&apos;</span>)
-<a class="l" name="152" href="#152">152</a><b>print</b>(<span class="s">&apos;&apos;&apos;<a href="http://example.com?a='b'&amp;">http://example.com?a='b'&amp;</a>&apos;&apos;&apos;</span>)
+<a class="l" name="152" href="#152">152</a><b>print</b>(<span class="s">&apos;&apos;&apos;<a href="http://example.com?a='b'&amp;">http://example.com?a=&apos;b&apos;&amp;</a>&apos;&apos;&apos;</span>)
 <a class="l" name="153" href="#153">153</a></body>
 </html>
