Add Ruby tests for bug w.r.t. {Symquo} mismatch after string interp.

--- a/test/org/opensolaris/opengrok/analysis/ruby/ruby_xrefres.html
+++ b/test/org/opensolaris/opengrok/analysis/ruby/ruby_xrefres.html
@@ -183,5 +183,7 @@ function get_sym_list(){return [["Class","xc",[["Board",4]]],["Method","xmt",[["
 <a class="l" name="175" href="#175">175</a><b>end</b>
 <a class="l" name="176" href="#176">176</a><b>print</b> <span class="s">&quot;\n&quot;</span>
 <a class="l" name="177" href="#177">177</a><b>print</b> <span class="s">&apos;<a href="http://example.com">http://example.com</a>&apos;</span>
-<a class="l" name="178" href="#178">178</a></body>
+<a class="l" name="178" href="#178">178</a><b>puts</b> <span class="s">&quot;Last #{</span><a href="/source/s?defs=log_lines" class="intelliWindow-symbol" data-definition-place="undefined-in-file">log_lines</a><span class="s">} lines from #{</span><a href="/source/s?defs=logfn" class="intelliWindow-symbol" data-definition-place="undefined-in-file">logfn</a><span class="s">}:&quot;</span>
+<a class="l" name="179" href="#179">179</a><b>print</b> <span class="s">&quot;\n&quot;</span>
+<a class="hl" name="180" href="#180">180</a></body>
 </html>
