Fix to fine-tune URI link for Haskell BCOMMENT
Also, handle that URI ending-pushback may be
present before collateral capture.

--- a/test/org/opensolaris/opengrok/analysis/haskell/sample2_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/haskell/sample2_xref.html
@@ -264,5 +264,5 @@ function get_sym_list(){return [["Function","xf",[["aliasSeparator",136],["allRa
 <a class="l" name="261" href="#261">261</a><span class="c">{- comment {- comment -}
 <a class="l" name="262" href="#262">262</a>comment
 <a class="l" name="263" href="#263">263</a>-}</span>
-<a class="l" name="264" href="#264">264</a><span class="c">{-<a href="http://example.com.-">http://example.com.-</a>}
-<a class="l" name="265" href="#265">265</a></span></pre></div></body></html>
+<a class="l" name="264" href="#264">264</a><span class="c">{-<a href="http://example.com">http://example.com</a>.-}</span>
+<a class="l" name="265" href="#265">265</a></pre></div></body></html>
