Fix Swift Identifier matching

--- a/test/org/opensolaris/opengrok/analysis/swift/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/swift/sample_xref.html
@@ -220,7 +220,8 @@ function get_sym_list(){return [["Variable","xv",[["delegate",37],["formatter",1
 <a class="l" name="212" href="#212">212</a><span class='fold-space'>&nbsp;</span>    }
 <a class="l" name="213" href="#213">213</a><span class='fold-space'>&nbsp;</span>    */</span>
 <a class="l" name="214" href="#214">214</a><span class='fold-space'>&nbsp;</span>
-<a class="l" name="215" href="#215">215</a><span class='fold-space'>&nbsp;</span>&#125;
-</span><a class="l" name="216" href="#216">216</a><span class='fold-space'>&nbsp;</span><span class="c">/*<a href="http://example.com">http://example.com</a>.*/</span>
-<a class="l" name="217" href="#217">217</a><span class='fold-space'>&nbsp;</span></body>
+<a class="l" name="215" href="#215">215</a><span class='fold-space'>&nbsp;</span>    <b>private</b> <a href="/source/s?defs=Int" class="intelliWindow-symbol" data-definition-place="undefined-in-file">Int</a> `<a href="/source/s?defs=class" class="intelliWindow-symbol" data-definition-place="undefined-in-file">class</a>`
+<a class="l" name="216" href="#216">216</a><span class='fold-space'>&nbsp;</span>&#125;
+</span><a class="l" name="217" href="#217">217</a><span class='fold-space'>&nbsp;</span><span class="c">/*<a href="http://example.com">http://example.com</a>.*/</span>
+<a class="l" name="218" href="#218">218</a><span class='fold-space'>&nbsp;</span></body>
 </html>
