--- a/test/org/opensolaris/opengrok/analysis/swift/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/swift/sample_xref.html
@@ -97,11 +97,11 @@ function get_sym_list(){return [["Variable","xv",[["delegate",37],["formatter",1
 <a class="l" name="89" href="#89">89</a><span class='fold-space'>&nbsp;</span>    &#125;
 <a class="hl" name="90" href="#90">90</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="91" href="#91">91</a><span class='fold-space'>&nbsp;</span>
-<a class="l" name="92" href="#92">92</a><span class='fold-space'>&nbsp;</span>    <span class="c">/*init() {   // 3 - programmatic initializer
-<a class="l" name="93" href="#93">93</a><span class='fold-space'>&nbsp;</span>        <a href="/source/s?path=super.ini">super.ini</a>t(frame: CGRect())  // 4.
-<a class="l" name="94" href="#94">94</a><span class='fold-space'>&nbsp;</span>
-<a class="l" name="95" href="#95">95</a><span class='fold-space'>&nbsp;</span>
-<a class="l" name="96" href="#96">96</a><span class='fold-space'>&nbsp;</span>    }*/</span>
+<a class="l" name="92" href="#92">92</a><span class='fold-space'>&nbsp;</span>    <span class="c">/*init() {   // 3 - programmatic initializer</span>
+<a class="l" name="93" href="#93">93</a><span class='fold-space'>&nbsp;</span><span class="c">        <a href="/source/s?path=super.ini">super.ini</a>t(frame: CGRect())  // 4.</span>
+<a class="l" name="94" href="#94">94</a><span class='fold-space'>&nbsp;</span><span class="c"></span>
+<a class="l" name="95" href="#95">95</a><span class='fold-space'>&nbsp;</span><span class="c"></span>
+<a class="l" name="96" href="#96">96</a><span class='fold-space'>&nbsp;</span><span class="c">    }*/</span>
 <a class="l" name="97" href="#97">97</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="98" href="#98">98</a><span class='fold-space'>&nbsp;</span>    <b>override</b> <b>public</b> <b>func</b> <a class="xf" name="awakeFromNib"/><a href="/source/s?refs=awakeFromNib" class="xf intelliWindow-symbol" data-definition-place="def">awakeFromNib</a>() &#123;
 <a class="l" name="99" href="#99">99</a><span class='fold-space'>&nbsp;</span>        <b>super</b>.<a class="d intelliWindow-symbol" href="#awakeFromNib" data-definition-place="defined-in-file">awakeFromNib</a>()
@@ -164,9 +164,9 @@ function get_sym_list(){return [["Variable","xv",[["delegate",37],["formatter",1
 <a class="l" name="156" href="#156">156</a><span class='fold-space'>&nbsp;</span>        <a class="d intelliWindow-symbol" href="#formatter" data-definition-place="defined-in-file">formatter</a>.<a href="/source/s?defs=dateFormat" class="intelliWindow-symbol" data-definition-place="undefined-in-file">dateFormat</a> = <span class="s">&quot;EEEE&quot;</span>
 <a class="l" name="157" href="#157">157</a><span class='fold-space'>&nbsp;</span>        <b>self</b>.<a href="/source/s?defs=dayView" class="intelliWindow-symbol" data-definition-place="undefined-in-file">dayView</a>.<a href="/source/s?defs=weekDayLabel" class="intelliWindow-symbol" data-definition-place="undefined-in-file">weekDayLabel</a>.<a href="/source/s?defs=text" class="intelliWindow-symbol" data-definition-place="undefined-in-file">text</a> = <a class="d intelliWindow-symbol" href="#formatter" data-definition-place="defined-in-file">formatter</a>.<a href="/source/s?defs=string" class="intelliWindow-symbol" data-definition-place="undefined-in-file">string</a>(<a href="/source/s?defs=from" class="intelliWindow-symbol" data-definition-place="undefined-in-file">from</a>: <a href="/source/s?defs=date" class="intelliWindow-symbol" data-definition-place="undefined-in-file">date</a>)
 <a class="l" name="158" href="#158">158</a><span class='fold-space'>&nbsp;</span>
-<a class="l" name="159" href="#159">159</a><span class='fold-space'>&nbsp;</span>        <a class="d intelliWindow-symbol" href="#formatter" data-definition-place="defined-in-file">formatter</a>.<a href="/source/s?defs=dateFormat" class="intelliWindow-symbol" data-definition-place="undefined-in-file">dateFormat</a> = <span class="s">&quot;&quot;&quot;
-<a class="hl" name="160" href="#160">160</a><span class='fold-space'>&nbsp;</span>            YYYY
-<a class="l" name="161" href="#161">161</a><span class='fold-space'>&nbsp;</span>            &quot;&quot;&quot;</span>
+<a class="l" name="159" href="#159">159</a><span class='fold-space'>&nbsp;</span>        <a class="d intelliWindow-symbol" href="#formatter" data-definition-place="defined-in-file">formatter</a>.<a href="/source/s?defs=dateFormat" class="intelliWindow-symbol" data-definition-place="undefined-in-file">dateFormat</a> = <span class="s">&quot;&quot;&quot;</span>
+<a class="hl" name="160" href="#160">160</a><span class='fold-space'>&nbsp;</span><span class="s">            YYYY</span>
+<a class="l" name="161" href="#161">161</a><span class='fold-space'>&nbsp;</span><span class="s">            &quot;&quot;&quot;</span>
 <a class="l" name="162" href="#162">162</a><span class='fold-space'>&nbsp;</span>        <b>self</b>.<a href="/source/s?defs=yearView" class="intelliWindow-symbol" data-definition-place="undefined-in-file">yearView</a>.<a href="/source/s?defs=yearLabel" class="intelliWindow-symbol" data-definition-place="undefined-in-file">yearLabel</a>.<a href="/source/s?defs=text" class="intelliWindow-symbol" data-definition-place="undefined-in-file">text</a> = <a class="d intelliWindow-symbol" href="#formatter" data-definition-place="defined-in-file">formatter</a>.<a href="/source/s?defs=string" class="intelliWindow-symbol" data-definition-place="undefined-in-file">string</a>(<a href="/source/s?defs=from" class="intelliWindow-symbol" data-definition-place="undefined-in-file">from</a>: <a href="/source/s?defs=date" class="intelliWindow-symbol" data-definition-place="undefined-in-file">date</a>)
 <a class="l" name="163" href="#163">163</a><span class='fold-space'>&nbsp;</span>    &#125;
 <a class="l" name="164" href="#164">164</a><span class='fold-space'>&nbsp;</span>
@@ -212,16 +212,19 @@ function get_sym_list(){return [["Variable","xv",[["delegate",37],["formatter",1
 <a class="l" name="204" href="#204">204</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="205" href="#205">205</a><span class='fold-space'>&nbsp;</span>    &#125;
 <a class="l" name="206" href="#206">206</a><span class='fold-space'>&nbsp;</span>
-<a class="l" name="207" href="#207">207</a><span class='fold-space'>&nbsp;</span>    <span class="c">/*
-<a class="l" name="208" href="#208">208</a><span class='fold-space'>&nbsp;</span>    // Only override draw() if you perform custom drawing.
-<a class="l" name="209" href="#209">209</a><span class='fold-space'>&nbsp;</span>    // An empty implementation adversely affects performance during animation.
-<a class="hl" name="210" href="#210">210</a><span class='fold-space'>&nbsp;</span>    override func draw(_ rect: CGRect) {
-<a class="l" name="211" href="#211">211</a><span class='fold-space'>&nbsp;</span>        // Drawing code
-<a class="l" name="212" href="#212">212</a><span class='fold-space'>&nbsp;</span>    }
-<a class="l" name="213" href="#213">213</a><span class='fold-space'>&nbsp;</span>    */</span>
+<a class="l" name="207" href="#207">207</a><span class='fold-space'>&nbsp;</span>    <span class="c">/*</span>
+<a class="l" name="208" href="#208">208</a><span class='fold-space'>&nbsp;</span><span class="c">    // Only override draw() if you perform custom drawing.</span>
+<a class="l" name="209" href="#209">209</a><span class='fold-space'>&nbsp;</span><span class="c">    // An empty implementation adversely affects performance during animation.</span>
+<a class="hl" name="210" href="#210">210</a><span class='fold-space'>&nbsp;</span><span class="c">    override func draw(_ rect: CGRect) {</span>
+<a class="l" name="211" href="#211">211</a><span class='fold-space'>&nbsp;</span><span class="c">        // Drawing code</span>
+<a class="l" name="212" href="#212">212</a><span class='fold-space'>&nbsp;</span><span class="c">    }</span>
+<a class="l" name="213" href="#213">213</a><span class='fold-space'>&nbsp;</span><span class="c">    */</span>
 <a class="l" name="214" href="#214">214</a><span class='fold-space'>&nbsp;</span>
 <a class="l" name="215" href="#215">215</a><span class='fold-space'>&nbsp;</span>    <b>private</b> <a href="/source/s?defs=Int" class="intelliWindow-symbol" data-definition-place="undefined-in-file">Int</a> `<a href="/source/s?defs=class" class="intelliWindow-symbol" data-definition-place="undefined-in-file">class</a>`
 <a class="l" name="216" href="#216">216</a><span class='fold-space'>&nbsp;</span>&#125;
 </span><a class="l" name="217" href="#217">217</a><span class='fold-space'>&nbsp;</span><span class="c">/*<a href="http://example.com">http://example.com</a>.*/</span>
-<a class="l" name="218" href="#218">218</a><span class='fold-space'>&nbsp;</span></body>
+<a class="l" name="218" href="#218">218</a><span class='fold-space'>&nbsp;</span><span class="c">/* comment /* comment */</span>
+<a class="l" name="219" href="#219">219</a><span class='fold-space'>&nbsp;</span><span class="c">comment</span>
+<a class="hl" name="220" href="#220">220</a><span class='fold-space'>&nbsp;</span><span class="c">*/</span>
+<a class="l" name="221" href="#221">221</a><span class='fold-space'>&nbsp;</span></body>
 </html>
