--- a/test/org/opensolaris/opengrok/analysis/scala/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/scala/sample_xref.html
@@ -6,7 +6,7 @@
 <head>
 <title>sampleFile - OpenGrok cross reference for /sampleFile</title></head><body>
 <script type="text/javascript">/* <![CDATA[ */
-function get_sym_list(){return [["Package","xp",[["org.apache.spark.broadcast",18]]],["Method","xmt",[["blockifyObject",270],["unBlockifyObject",287],["unpersist",308]]]];} /* ]]> */</script><a class="l" name="1" href="#1">1</a><span class="c">/*</span>
+function get_sym_list(){return [["Package","xp",[["org.apache.spark.broadcast",18]]],["Method","xmt",[["blockifyObject",270],["unBlockifyObject",287],["unary_",318],["unpersist",308]]]];} /* ]]> */</script><a class="l" name="1" href="#1">1</a><span class="c">/*</span>
 <a class="l" name="2" href="#2">2</a><span class="c"> * Licensed to the Apache Software Foundation (ASF) under one or more</span>
 <a class="l" name="3" href="#3">3</a><span class="c"> * contributor license agreements.  See the NOTICE file distributed with</span>
 <a class="l" name="4" href="#4">4</a><span class="c"> * this work for additional information regarding copyright ownership.</span>
@@ -304,7 +304,7 @@ function get_sym_list(){return [["Package","xp",[["org.apache.spark.broadcast",1
 <a class="l" name="296" href="#296">296</a>    <b>val</b> <a class="d" name="obj"/><a href="/source/s?refs=obj" class="d intelliWindow-symbol" data-definition-place="def">obj</a> = <a href="/source/s?defs=Utils" class="intelliWindow-symbol" data-definition-place="undefined-in-file">Utils</a>.<a href="/source/s?defs=tryWithSafeFinally" class="intelliWindow-symbol" data-definition-place="undefined-in-file">tryWithSafeFinally</a> {
 <a class="l" name="297" href="#297">297</a>      <a class="d intelliWindow-symbol" href="#serIn" data-definition-place="defined-in-file">serIn</a>.<a href="/source/s?defs=readObject" class="intelliWindow-symbol" data-definition-place="undefined-in-file">readObject</a>[<a href="/source/s?defs=T" class="intelliWindow-symbol" data-definition-place="undefined-in-file">T</a>]()
 <a class="l" name="298" href="#298">298</a>    } {
-<a class="l" name="299" href="#299">299</a>      <a class="d intelliWindow-symbol" href="#serIn" data-definition-place="defined-in-file">serIn</a>.<a href="/source/s?defs=close" class="intelliWindow-symbol" data-definition-place="undefined-in-file">close</a>()
+<a class="l" name="299" href="#299">299</a>      <a class="d intelliWindow-symbol" href="#serIn" data-definition-place="defined-in-file">serIn</a>.`<a href="/source/s?defs=close" class="intelliWindow-symbol" data-definition-place="undefined-in-file">close</a>`()
 <a class="hl" name="300" href="#300">300</a>    }
 <a class="l" name="301" href="#301">301</a>    <a href="/source/s?defs=obj" class="intelliWindow-symbol" data-definition-place="undefined-in-file">obj</a>
 <a class="l" name="302" href="#302">302</a>  }
@@ -317,10 +317,13 @@ function get_sym_list(){return [["Package","xp",[["org.apache.spark.broadcast",1
 <a class="l" name="309" href="#309">309</a>    <a href="/source/s?defs=logDebug" class="intelliWindow-symbol" data-definition-place="undefined-in-file">logDebug</a>(s<span class="s">&quot;<a href="http://example.com?">http://example.com?</a>$</span><a href="/source/s?defs=id" class="intelliWindow-symbol" data-definition-place="undefined-in-file">id</a><span class="s">&quot;</span>)
 <a class="hl" name="310" href="#310">310</a>    <a href="/source/s?defs=SparkEnv" class="intelliWindow-symbol" data-definition-place="undefined-in-file">SparkEnv</a>.<a href="/source/s?defs=get" class="intelliWindow-symbol" data-definition-place="undefined-in-file">get</a>.<a href="/source/s?defs=blockManager" class="intelliWindow-symbol" data-definition-place="undefined-in-file">blockManager</a>.<a href="/source/s?defs=master" class="intelliWindow-symbol" data-definition-place="undefined-in-file">master</a>.<a href="/source/s?defs=removeBroadcast" class="intelliWindow-symbol" data-definition-place="undefined-in-file">removeBroadcast</a>(<a href="/source/s?defs=id" class="intelliWindow-symbol" data-definition-place="undefined-in-file">id</a>, <a href="/source/s?defs=removeFromDriver" class="intelliWindow-symbol" data-definition-place="undefined-in-file">removeFromDriver</a>, <a href="/source/s?defs=blocking" class="intelliWindow-symbol" data-definition-place="undefined-in-file">blocking</a>)
 <a class="l" name="311" href="#311">311</a>  }
-<a class="l" name="312" href="#312">312</a>}
-<a class="l" name="313" href="#313">313</a><span class="c">/*<a href="http://example.com">http://example.com</a>.*/</span>
-<a class="l" name="314" href="#314">314</a><span class="c">/* comment /* comment */</span>
-<a class="l" name="315" href="#315">315</a><span class="c">comment</span>
-<a class="l" name="316" href="#316">316</a><span class="c">*/</span>
-<a class="l" name="317" href="#317">317</a></body>
+<a class="l" name="312" href="#312">312</a>
+<a class="l" name="313" href="#313">313</a>  <span class="c">/*<a href="http://example.com">http://example.com</a>.*/</span>
+<a class="l" name="314" href="#314">314</a>  <span class="c">/* comment /* comment */</span>
+<a class="l" name="315" href="#315">315</a><span class="c">  comment</span>
+<a class="l" name="316" href="#316">316</a><span class="c">  */</span>
+<a class="l" name="317" href="#317">317</a>
+<a class="l" name="318" href="#318">318</a>  <b>def</b> <a class="xmt" name="unary_"/><a href="/source/s?refs=unary_" class="xmt intelliWindow-symbol" data-definition-place="def">unary_</a>~ = <span class="n">0</span>
+<a class="l" name="319" href="#319">319</a>}
+<a class="hl" name="320" href="#320">320</a></body>
 </html>
