Link {BrowseableURI} from [PL]SQL
Also:
- Test nested comments.

--- a/test/org/opensolaris/opengrok/analysis/sql/samplepls_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/sql/samplepls_xref.html
@@ -15,7 +15,7 @@ function get_sym_list(){return [["Variable","xv",[["ex_invalid_path_format",64],
 <a class="l" name="7" href="#7">7</a>  you may not use this file except in compliance with the License.
 <a class="l" name="8" href="#8">8</a>  You may obtain a copy of the License at
 <a class="l" name="9" href="#9">9</a>
-<a class="hl" name="10" href="#10">10</a>      http://www.apache.org/licenses/LICENSE-2.0
+<a class="hl" name="10" href="#10">10</a>      <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
 <a class="l" name="11" href="#11">11</a>
 <a class="l" name="12" href="#12">12</a>  Unless required by applicable law or agreed to in writing, software
 <a class="l" name="13" href="#13">13</a>  distributed under the License is distributed on an &quot;AS IS&quot; BASIS,
@@ -301,7 +301,7 @@ function get_sym_list(){return [["Variable","xv",[["ex_invalid_path_format",64],
 <a class="l" name="293" href="#293">293</a>  you may not use this file except in compliance with the License.
 <a class="l" name="294" href="#294">294</a>  You may obtain a copy of the License at
 <a class="l" name="295" href="#295">295</a>
-<a class="l" name="296" href="#296">296</a>      http://www.apache.org/licenses/LICENSE-2.0
+<a class="l" name="296" href="#296">296</a>      <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
 <a class="l" name="297" href="#297">297</a>
 <a class="l" name="298" href="#298">298</a>  Unless required by applicable law or agreed to in writing, software
 <a class="l" name="299" href="#299">299</a>  distributed under the License is distributed on an &quot;AS IS&quot; BASIS,
@@ -527,5 +527,9 @@ function get_sym_list(){return [["Variable","xv",[["ex_invalid_path_format",64],
 <a class="l" name="519" href="#519">519</a>
 <a class="hl" name="520" href="#520">520</a><b>end</b> <a class="d intelliWindow-symbol" href="#ut_suite_builder" data-definition-place="defined-in-file">ut_suite_builder</a>;
 <a class="l" name="521" href="#521">521</a>/
-<a class="l" name="522" href="#522">522</a></body>
+<a class="l" name="522" href="#522">522</a><span class="c">/*<a href="http://example.com">http://example.com</a>.*/</span>
+<a class="l" name="523" href="#523">523</a><span class="c">/* comment /* comment */
+<a class="l" name="524" href="#524">524</a>comment
+<a class="l" name="525" href="#525">525</a>*/</span>
+<a class="l" name="526" href="#526">526</a></body>
 </html>
