--- a/test/org/opensolaris/opengrok/analysis/sql/samplesql_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/sql/samplesql_xref.html
@@ -1416,5 +1416,9 @@ function get_sym_list(){return [["Variable","xv",[["@SQLDataFolder",50],["@retry
 <a class="l" name="1408" href="#1408">1408</a>
 <a class="l" name="1409" href="#1409">1409</a>    <b>RETURN</b> <span class="n">0</span>
 <a class="hl" name="1410" href="#1410">1410</a><a href="/source/s?defs=GO" class="intelliWindow-symbol" data-definition-place="undefined-in-file">GO</a>
-<a class="l" name="1411" href="#1411">1411</a></body>
+<a class="l" name="1411" href="#1411">1411</a><span class="c">/*<a href="http://example.com">http://example.com</a>.*/</span>
+<a class="l" name="1412" href="#1412">1412</a><span class="c">/* comment /* comment */
+<a class="l" name="1413" href="#1413">1413</a>comment
+<a class="l" name="1414" href="#1414">1414</a>*/</span>
+<a class="l" name="1415" href="#1415">1415</a></body>
 </html>
