Fix so Scala stateless multi-line comment is in COMMENT_CLASS

--- a/test/org/opensolaris/opengrok/analysis/scala/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/scala/sample_xref.html
@@ -324,6 +324,7 @@ function get_sym_list(){return [["Package","xp",[["org.apache.spark.broadcast",1
 <a class="l" name="316" href="#316">316</a><span class="c">  */</span>
 <a class="l" name="317" href="#317">317</a>
 <a class="l" name="318" href="#318">318</a>  <b>def</b> <a class="xmt" name="unary_"/><a href="/source/s?refs=unary_" class="xmt intelliWindow-symbol" data-definition-place="def">unary_</a>~ = <span class="n">0</span>
-<a class="l" name="319" href="#319">319</a>}
-<a class="hl" name="320" href="#320">320</a></body>
+<a class="l" name="319" href="#319">319</a>  <span class="c">/***/</span>
+<a class="hl" name="320" href="#320">320</a>}
+<a class="l" name="321" href="#321">321</a></body>
 </html>
