--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <img src="images/opengrok-logo.png">
         <p>"A wicked fast source browser"</p>
 
-        <p class="view"><a href="https://github.com/OpenGrok/OpenGrok">View the Project on GitHub
-	<small>OpenGrok/OpenGrok</small></a></p>
+        <p class="view"><a href="https://github.com/oracle/opengrok">View the Project on GitHub
+	<small>oracle/opengrok</small></a></p>
 
 	<!--
 		Note: the images should have width at most 270px to match
@@ -56,7 +56,7 @@ written in Java.
 </p>
 
 <p>
-Downloads: see <a href="https://github.com/OpenGrok/OpenGrok/releases">releases</a>.
+Downloads: see <a href="https://github.com/oracle/opengrok/releases">releases</a>.
 </p>
 
 <p>
@@ -65,11 +65,11 @@ Requirements:
 
 <ul>
   <li>
-  Latest <a href="http://www.oracle.com/technetwork/java//">Java</a> 1.8
+  Latest <a href="http://www.oracle.com/technetwork/java/">Java</a> 1.8
   </li>
 
   <li>
-  A servlet container like <a href="https://glassfish.dev.java.net/">GlassFish</a>
+  A servlet container like <a href="https://javaee.github.io/glassfish/">GlassFish</a>
   or <a href="http://tomcat.apache.org/">Tomcat</a> (8.x or later) also running with Java at least 1.8
   </li>
 
@@ -85,35 +85,35 @@ Wiki pages:
 
 <ul>
   <li>
-  <a href="https://github.com/OpenGrok/OpenGrok/wiki/Features">Features</a>
+  <a href="https://github.com/oracle/opengrok/wiki/Features">Features</a>
   </li>
 
   <li>
-  <a href="https://github.com/OpenGrok/OpenGrok/wiki/Comparison-with-Similar-Tools">Comparison with Similar Tools</a>
+  <a href="https://github.com/oracle/opengrok/wiki/Comparison-with-Similar-Tools">Comparison with Similar Tools</a>
   </li>
 
   <li>
-  <a href="https://github.com/OpenGrok/OpenGrok/wiki/Supported-Revision-Control-Systems">Supported Revision Control Systems</a>
+  <a href="https://github.com/oracle/opengrok/wiki/Supported-Revision-Control-Systems">Supported Revision Control Systems</a>
   </li>
 
   <li>
-  <a href="https://github.com/OpenGrok/OpenGrok/wiki/Supported-Languages-and-Formats">Supported Languages and Formats</a>
+  <a href="https://github.com/oracle/opengrok/wiki/Supported-Languages-and-Formats">Supported Languages and Formats</a>
   </li>
 
   <li>
-  <a href="https://github.com/OpenGrok/OpenGrok/wiki/How-to-build-OpenGrok-from-source">How to build OpenGrok from source</a>
+  <a href="https://github.com/oracle/opengrok/wiki/How-to-build-OpenGrok-from-source">How to build OpenGrok from source</a>
   </li>
 
   <li>
-  <a href="https://github.com/OpenGrok/OpenGrok/wiki/How-to-install-OpenGrok">How to install OpenGrok</a>
+  <a href="https://github.com/oracle/opengrok/wiki/How-to-install-OpenGrok">How to install OpenGrok</a>
   </li>
 
   <li>
-  <a href="https://github.com/OpenGrok/OpenGrok/wiki/OpenGrok-Internals">Internals</a>
+  <a href="https://github.com/oracle/opengrok/wiki/OpenGrok-Internals">Internals</a>
   </li>
 
   <li>
-  <a href="https://github.com/OpenGrok/OpenGrok/wiki/Story-of-OpenGrok">Story of OpenGrok</a>
+  <a href="https://github.com/oracle/opengrok/wiki/Story-of-OpenGrok">Story of OpenGrok</a>
   </li>
 </ul>
 
@@ -123,13 +123,13 @@ Communication:
 
 <ul>
   <li>
-  <a href="https://github.com/OpenGrok/OpenGrok/wiki/Discussions">Discussions
+  <a href="https://github.com/oracle/opengrok/wiki/Discussions">Discussions
   (mailing lists, etc.)</a>
   </li>
 
   <li>
   Bugs or feature requests should be reported via
-  <a href="https://github.com/OpenGrok/OpenGrok/issues">Issues</a>.
+  <a href="https://github.com/oracle/opengrok/issues">Issues</a>.
   </li>
 
   <li>
@@ -162,7 +162,7 @@ This product includes software developed by
       </section>
       <footer>
         <p>This project is maintained by
-	<a href="https://github.com/OpenGrok">OpenGrok</a></p>
+	<a href="https://github.com/oracle">Oracle</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by
 	<a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
