Fix argument to onCertainlyPublish()

--- a/test/org/opensolaris/opengrok/analysis/powershell/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/powershell/sample_xref.html
@@ -482,5 +482,9 @@ function get_sym_list(){return [["Variable","xv",[["ALBoundParameters.Add",177],
 <a class="l" name="474" href="#474">474</a><span class='fold-space'>&nbsp;</span><b>Write-Debug</b> `$`{`}
 <a class="l" name="475" href="#475">475</a><span class='fold-space'>&nbsp;</span><b>Write-Debug</b> $<b>false</b>.$<b>true</b>.$<b>param</b>
 <a class="l" name="476" href="#476">476</a><span class='fold-space'>&nbsp;</span>$(<b>Write-Debug</b> $<b>true</b>)
-<a class="l" name="477" href="#477">477</a><span class='fold-space'>&nbsp;</span></body>
+<a class="l" name="477" href="#477">477</a><span class='fold-space'>&nbsp;</span>
+<a class="l" name="478" href="#478">478</a><span class='fold-space'>&nbsp;</span><a class="xlbl" name="OuterLoop">:OuterLoop</a> <b>while</b> ($<b>true</b>) &#123;
+<a class="l" name="479" href="#479">479</a><span class='fold-space'>&nbsp;</span>    <b>while</b> ($<b>true</b>) &#123; <b>break</b> <a class="d intelliWindow-symbol" href="#OuterLoop" data-definition-place="defined-in-file">OuterLoop</a> &#125;
+<a class="hl" name="480" href="#480">480</a><span class='fold-space'>&nbsp;</span>&#125;
+<a class="l" name="481" href="#481">481</a><span class='fold-space'>&nbsp;</span></body>
 </html>
