Fix Pascal comments

--- a/test/org/opensolaris/opengrok/analysis/pascal/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/pascal/sample_xref.html
@@ -536,5 +536,12 @@ function get_sym_list(){return [["Function","xf",[["AddEditor",96],["AddEditor",
 <a class="l" name="528" href="#528">528</a><span class='fold-space'>&nbsp;</span>end&#59;
 <a class="l" name="529" href="#529">529</a><span class='fold-space'>&nbsp;</span>
 <a class="hl" name="530" href="#530">530</a><span class='fold-space'>&nbsp;</span>end.
-<a class="l" name="531" href="#531">531</a><span class='fold-space'>&nbsp;</span></body>
+<a class="l" name="531" href="#531">531</a><span class='fold-space'>&nbsp;</span>
+<a class="l" name="532" href="#532">532</a><span class='fold-space'>&nbsp;</span><span class="c">{ Comment 1 (* comment 2 *) }</span>
+<a class="l" name="533" href="#533">533</a><span class='fold-space'>&nbsp;</span><span class="c">(* Comment 1 { comment 2 } *)</span>
+<a class="l" name="534" href="#534">534</a><span class='fold-space'>&nbsp;</span><span class="c">{ comment 1 // Comment 2 }</span>
+<a class="l" name="535" href="#535">535</a><span class='fold-space'>&nbsp;</span><span class="c">(* comment 1 // Comment 2 *)</span>
+<a class="l" name="536" href="#536">536</a><span class='fold-space'>&nbsp;</span><span class="c">// comment 1 (* comment 2 *)</span>
+<a class="l" name="537" href="#537">537</a><span class='fold-space'>&nbsp;</span><span class="c">// comment 1 { comment 2 }</span>
+<a class="l" name="538" href="#538">538</a><span class='fold-space'>&nbsp;</span></body>
 </html>
