--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@ This product includes software developed by
 
       </section>
       <footer>
-        <p>This project is maintained by
-	<a href="https://github.com/oracle">Oracle</a></p>
+        <p>This project is maintained by enthusiasts and volunteers all over the world.</p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by
 	<a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
