--- a/test/org/opensolaris/opengrok/analysis/haskell/sampleXrefExpected.html
+++ b/test/org/opensolaris/opengrok/analysis/haskell/sampleXrefExpected.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><link rel="stylesheet" type="text/css" href="http://localhost:8080/source/default/style.css" /><title>Haskell Xref Test</title></head>
+<!DOCTYPE html><html lang="en"><head><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><link rel="stylesheet" type="text/css" href="http://localhost:8080/source/default/style.css" /><title>Haskell Xref Test</title></head>
 <body><div id="src"><pre>
 <script type="text/javascript">/* <![CDATA[ */
 function get_sym_list(){return [["Function","xf",[["x'y'",6]]]];} /* ]]> */</script><a class="l" name="1" href="#1">1</a><span class="c">-- classic quick sort (short but not so efficient)</span>
