--- a/test/org/opensolaris/opengrok/analysis/powershell/sample_xref.html
+++ b/test/org/opensolaris/opengrok/analysis/powershell/sample_xref.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>sampleFile - OpenGrok cross reference for /sampleFile</title></head><body>
